--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -133,14 +133,14 @@
           <button
             pButton
             pRipple
-            icon="pi pi-fw pi-home"
+            icon="pi pi-pencil"
             class="p-button-rounded p-button-success mr-2"
             (click)="editFournisseur(fournisseur)"
           ></button>
           <button
             pButton
             pRipple
-            icon="pi pi-fw pi-home"
+            icon="pi pi-trash"
             class="p-button-rounded p-button-danger"
             (click)="deleteFournisseur(fournisseur)"
           ></button>
