Update main-content component to use new icons for add button and update top-bar component styling

--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -5,7 +5,7 @@
         pButton
         pRipple
         label="New"
-        icon="pi pi-fw pi-home"
+        icon="pi pi-plus"
         class="p-button-success mr-2"
         (click)="openNew()"
       ></button>
