--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,12 +1,14 @@
 <div class="top-bar">
-    <div style="display: flex;">
-        <div style="width: 200px;display: flex;justify-content: center">
-            <h2 style="font-weight: 400;">Clean Budget</h2>        
-        </div>
+  <div class="top-bar-content">
+    <div class="logo-container">
+      <img src="../../../assets/logo.png" alt="Logo" class="logo">
+    </div>
+    <div class="title-container">
+      <h2>Clean Budget</h2>
+    </div>
     <div class="toggle-btn" (click)="onToggleSidebar()">
-        <i class="fas fa-bars"></i>
+      <i class="pi pi-align-justify"></i>
     </div>
-    </div>
-    <div class="top-bar-icons">
-    </div>
+  </div>
+  <div class="top-bar-icons"></div>
 </div>
