refactor: Update top-bar component to use new icon for menu toggle button

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -7,7 +7,7 @@
       <h2>Clean Budget</h2>
     </div>
     <div class="toggle-btn" (click)="onToggleSidebar()">
-      <i class="pi pi-align-justify"></i>
+      <i class="pi pi-bars"></i>
     </div>
   </div>
   <div class="top-bar-icons"></div>
