style: Update profile image size and border radius in sidebar component

--- a/src/app/components/side-bar/sidebar.component.scss
+++ b/src/app/components/side-bar/sidebar.component.scss
@@ -84,9 +84,10 @@
 
 
   .profile-image {
-    width: 70px;
-    height: 60px;
-    border-radius: 60%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
   }
   
   .profile-name {
