--- a/src/app/components/structure/fournisseur/fournisseur.component.html
+++ b/src/app/components/structure/fournisseur/fournisseur.component.html
@@ -1,4 +1,5 @@
 <div class="card">
+  <p-toast />
     <p-toolbar styleClass="mb-4 gap-2">
       <ng-template pTemplate="left">
         <button
@@ -61,7 +62,7 @@
           <th scope="col" style="width: 4rem">
             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
           </th>
-          <th scope="col" pSortableColumn="nom" style="min-width: 10rem">
+          <th scope="col" pSortableColumn="nom" >
             Nom<p-sortIcon field="nom"></p-sortIcon>
             <p-columnFilter
               class="filterIcon"
@@ -70,7 +71,7 @@
               display="menu"
             ></p-columnFilter>
           </th>
-          <th scope="col" pSortableColumn="description" style="min-width: 10rem">
+          <th scope="col" pSortableColumn="description" >
             Description<p-sortIcon field="description"></p-sortIcon>
             <p-columnFilter
               class="filterIcon"
@@ -79,7 +80,7 @@
               display="menu"
             ></p-columnFilter>
           </th>
-          <th scope="col" pSortableColumn="email" style="min-width: 10rem">
+          <th scope="col" pSortableColumn="email" >
             Email<p-sortIcon field="email"></p-sortIcon>
             <p-columnFilter
               class="filterIcon"
@@ -88,7 +89,7 @@
               display="menu"
             ></p-columnFilter>
           </th>
-          <th scope="col" pSortableColumn="telephone" style="min-width: 10rem">
+          <th scope="col" pSortableColumn="telephone" >
             Telephone<p-sortIcon field="telephone"></p-sortIcon>
             <p-columnFilter
               class="filterIcon"
@@ -97,7 +98,7 @@
               display="menu"
             ></p-columnFilter>
           </th>
-          <th scope="col" pSortableColumn="adresse" style="min-width: 10rem">
+          <th scope="col" pSortableColumn="adresse" >
             Adresse<p-sortIcon field="adresse"></p-sortIcon>
             <p-columnFilter
               class="filterIcon"
@@ -106,15 +107,7 @@
               display="menu"
             ></p-columnFilter>
           </th>
-          <th scope="col" pSortableColumn="supprime" style="min-width: 10rem">
-            Supprime<p-sortIcon field="supprime"></p-sortIcon>
-            <p-columnFilter
-              class="filterIcon"
-              type="boolean"
-              field="supprime"
-              display="menu"
-            ></p-columnFilter>
-          </th>
+       
           <th scope="col"></th>
         </tr>
       </ng-template>
@@ -128,7 +121,7 @@
           <td>{{ fournisseur.email }}</td>
           <td>{{ fournisseur.telephone }}</td>
           <td>{{ fournisseur.adresse }}</td>
-          <td>{{ fournisseur.supprime ? "Yes" : "No" }}</td>
+          
           <td>
             <button
               pButton
